fixed display bug on safari

--- a/src/style.less
+++ b/src/style.less
@@ -36,6 +36,7 @@ body {
 .intereact, .scroller {
   width: 100%;
   height: 100%;
+  flex: 1 0 0;
 }
 
 .grid-system {
